--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -22,3 +22,15 @@
 .button__btn:active {
   transform: scale(1.1);
 }
+
+.statistics__area {
+  width: 250px;
+  margin: auto;
+  text-align: center;
+}
+
+.statistics__list {
+  padding: 0px;
+  list-style: none;
+  text-align: center;
+}
